--- a/WebApiStudentData/WebApiStudentData.csproj
+++ b/WebApiStudentData/WebApiStudentData.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Crypto.cs" />
     <Compile Include="Tools\ErrorTojSonConverter.cs" />
+    <Compile Include="ViewModels\VM_User_Education_Character_Course_Collection.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
