--- a/WebApiStudentData/WebApiStudentData.csproj
+++ b/WebApiStudentData/WebApiStudentData.csproj
@@ -224,6 +224,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Crypto.cs" />
     <Compile Include="Tools\ErrorTojSonConverter.cs" />
+    <Compile Include="Tools\Mail.cs" />
+    <Compile Include="Tools\MailTools.cs" />
     <Compile Include="ViewModels\VM_User_Education_Character_Course_Collection.cs" />
   </ItemGroup>
   <ItemGroup>
