Færdiggjort mail håndtering ved kontaktformularer.

--- a/WebApiStudentData/Web.config
+++ b/WebApiStudentData/Web.config
@@ -97,8 +97,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DatabaseContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=WebApiStudentData_16.Models.DatabaseContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="DatabaseContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=WebApiStudentData_16.Models.DatabaseContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
 
-    <!--<add name="DatabaseContext" connectionString="Data Source=mssql5.unoeuro.com;Database=buchwaldshave34_dk_db;User ID=buchwaldsha_dk;Password=buchwald34;Integrated Security=false;" providerName="System.Data.SqlClient" />-->
+    <add name="DatabaseContext" connectionString="Data Source=mssql5.unoeuro.com;Database=buchwaldshave34_dk_db;User ID=buchwaldsha_dk;Password=buchwald34;Integrated Security=false;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
